add js function

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <option value="over">65 anni o più</option>
         </select>
 
-        <input type="button" value="Genera">
+        <input type="button" value="Genera" id="submit-button">
 
 
     </div>
