--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="row text-center p-5">
             <div class="priceCalc p-4 rounded-4">
                 <img class="logo mb-4" src="./assets/img/logo.png" alt="">
+                <h3 class="mb-4">Calcola il prezzo del tuo biglietto</h3>
                 <section class="dates">
                     <div class="form">
                         <input class="input" type="text" name="Nome e Cognome" id="name">
@@ -31,7 +32,7 @@
                     </div>
                 </section>
                 <div class="my_ticket">
-                    
+
                 </div>
             </div> 
         </div>
