add style to your ticket

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="container-fluid vh-100">
         <div class="row text-center p-5">
-            <div class="priceCalc p-4 rounded-4">
+            <div class="priceCalc p-4 m-4 rounded-4">
                 <img class="logo mb-4" src="./assets/img/logo.png" alt="">
                 <h3 class="mb-4">Calcola il prezzo del tuo biglietto</h3>
                 <section class="dates">
@@ -31,9 +31,25 @@
                         
                     </div>
                 </section>
-                <div class="my_ticket">
-
-                </div>
+            </div> 
+            <div class="priceCalc p-4 m-4 rounded-4">
+                <h4 class="mb-4">Ecco il tuo bilgietto</h4>
+                    <table class="m-auto" >
+                        <tr>
+                          <th>Nome Passeggero</th>
+                          <th>Offerta</th>
+                          <th>Carrozza</th>
+                          <th>Codice CP</th>
+                          <th>Costo Biglietto</th>
+                        </tr>
+                        <tr>
+                          <td id="userName"></td>
+                          <td></td>
+                          <td id="carrozza"></td>
+                          <td id="cp"></td>
+                          <td id="ticketPrice"></td>
+                        </tr>
+                      </table>            
             </div> 
         </div>
                  
