--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <section class="dates">
                     <div class="form">
                         <input placeholder="Nome e Cognome" class="input" type="text" name="Nome e Cognome" id="name">
-                        <input placeholder="chilometri da percorrere" class="input" type="text" name="Km da percorrere" id="km">
+                        <input placeholder="Tragitto in Km" class="input" type="text" name="Km da percorrere" id="km">
                         <select class="input" name="eta" id="eta">
                             <option value="under">Meno di 18 anni</option>
                             <option value="between">Da 18 a 64 anni</option>
