--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             </select>
                             <div class="buttons mt-4">
                                 <input class="primary_btn p-1 rounded-2 border-0" type="button" value="Genera" id="submit-button">
-                                <input class="secondary_btn p-1 rounded-2 border-1" type="button" value="Reset" id="submit-button">
+                                <input class="secondary_btn p-1 rounded-2 border-1" type="button" value="Reset" id="clear-button">
                             </div>
                             
                         </div>
