add type submit and reset to buttons

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                                 <option value="over">65 anni o più</option>
                             </select>
                             <div class="buttons mt-4">
-                                <input class="primary_btn p-1 rounded-2 border-0" type="button" value="Genera" id="submit-button">
-                                <input class="secondary_btn p-1 rounded-2 border-1" type="button" value="Reset" id="clear-button">
+                                <input class="primary_btn p-1 rounded-2 border-0" type="submit" value="Genera" id="submit-button">
+                                <input class="secondary_btn p-1 rounded-2 border-1" type="reset" value="Reset" id="clear-button">
                             </div>
                             
                         </div>
